--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,197 @@
 
-/* The Login Page Text/Css */
-.user_cover {
-  padding: 0px 40px;
-  margin: 20px 0px;
+.toolbar {
+    background-color: black;
 }
 
-.username {
-  text-align: center;
-  color: white;
-  width: 100%;
-  font-size: 12px;
-  margin-top: 5px;
+.tabbar {
+    background-color:black;
 }
 
-.user_thumbnail {
-  width: 100px;
-  height: 100px;
+.title {
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+}
+
+.bg-title {
+    background-color: black;
+}
+
+.img {
+    width: 100%;
+    height: 550px;
+}
+
+
+.img-search {
+    width: 100px;
+    height: auto;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.imglike {
+    padding: 5px;
+    width: 100px;
+  }
+
+.mt-5 {
+    margin-top: 10px;
+}
+
+.pd {
+    padding: 10px;
+}
+
+.icon {
+    font-size: 28px;
+    color: chocolate;
+}
+
+.icon-center {
+    text-align: center;
+}
+
+.left {
+    text-align: center;
+}
+
+.toolbar__left,
+.toolbar__right,
+.tabbar {
+    background-color: #000000;
+}
+
+/*-----------หน้า Home-----------*/  
+
+.carousel ons-carousel-item img {
+    width: 100%;
+    max-height: 190px
+  }
+
+  .movie_list {
+    margin: 10px;
+    height: 130px;
+    padding-top: 30px;
+  }
+
+  .movie_list img {
+    width: 90%
+  }  
+
+/*-----------หน้า Movie_Details-----------*/
+
+.trailer {
+    height: 190px;
+    position: relative;
+  }
+
+  .trailer img {
+    width: 100%;
+    height: 100%
+  }
+
+  .trailer ons-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    margin-top: -25px;
+    margin-left: -25px;
+    color: #666;
+    background: white;
+    width: 50px;
+    text-align: center;
+    border-radius: 50%;
+    opacity: 0.7;
+  }
+
+  .trailer ons-icon:active {
+    opacity: 1;
+  }
+
+  .movie_info {
+    padding: 0px 10px;
+    font-size: 14px;
+  }
+
+  .movie_general_info {
+    width: 250px;
+    margin-bottom: 15px;
+    color: gray;
+  }
+
+  .movie_synopsis {
+    text-align: justify;
+    margin-bottom: 10px;
+  }
+
+  .movie_cast {
+    color: gray;
+  }
+
+  .stars {
+    white-space: nowrap;
+    margin-right: 15px
+  }
+
+  /* Chat containers */
+  .container {
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+  }
+
+/* Darker chat container */
+.darker {
+  border-color: black;
+  background-color: #ddd;
+}
+
+/* Clear floats */
+.container::after {
+  content: "";
+  clear: both;
   display: table;
-  text-align: center;
-  margin: auto;
 }
 
-.user_thumbnail ons-icon {
-  font-size: 70px;
-  display: table-cell;
-  vertical-align: middle;
+/* Style images */
+.container img {
+  float: left;
+  max-width: 60px;
+  width: 100%;
+  margin-right: 20px;
+  border-radius: 50%;
 }
 
-/* The Splitter Menu */
-.menu_header {
-  background-color: black;
-  border-bottom: 1px solid rgba(147, 145, 145, 0.76);
-  color: white;
-  height: 25px;
-  font-size: 10px;
-  padding: 0 0 0 16px!important;
+/* Style the right image */
+.container img.right {
+  float: right;
+  margin-left: 20px;
+  margin-right:0;
+}
+
+/* Style time text */
+.time-right {
+  float: right;
+  color:black;
+}
+
+/* Style time text */
+.time-left {
+  float: left;
+  color:grey;
 }
 
 
-/* Homepage */
+
+
+
+
 
 .logo {
   padding: 10px;
@@ -54,130 +207,9 @@
     display: block;
 }
 
-.carousel ons-carousel-item img {
-  width: 100%;
-  max-height: 190px
-}
-
-.cover-label {
-  text-align: center;
-  cursor: default;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-ul li {
-  display: inline;
-  margin-right: 5px;
-}
-
-.circle {
-  font-size: 15px;
-  display: table-cell;
-  color: #999;
-}
-
-.circle_current {
-  color: white;
-}
-
-.movie_list {
-  margin: 10px;
-  height: 130px;
-  padding-top: 30px;
-}
-
-.movie_list img {
-  width: 90%
-}
-
-
-/* Movie Detail */
-.trailer {
-  height: 190px;
-  position: relative;
-}
-
-.trailer img {
-  width: 100%;
-  height: 100%
-}
-
-.trailer ons-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 50px;
-  margin-top: -25px;
-  margin-left: -25px;
-  color: #666;
-  background: white;
-  width: 50px;
-  text-align: center;
-  border-radius: 50%;
-  opacity: 0.7;
-}
-
-.trailer ons-icon:active {
-  opacity: 1;
-}
-
-.trailer_toolbar {
-  position: absolute;
-}
-
-.movie_info {
-  padding: 0px 10px;
-  font-size: 14px;
-}
-
-.movie_general_info {
-  width: 250px;
-  margin-bottom: 15px;
-  color: gray;
-}
-
-.movie_synopsis {
-  text-align: justify;
-  margin-bottom: 10px;
-}
-
-.movie_cast {
-  color: gray;
-}
-
-.stars {
-  white-space: nowrap;
-  margin-right: 15px
-}
-
-.movie_extra_buttons {
-  margin-top: 20px;
-  width: 50%;
-}
-
-.movie_extra_buttons ons-icon {
-  font-size: 25px;
-}
-
-.movie_extra_buttons ons-button {
-  text-align: center;
-  color: white;
-  font-size: 14px;
-}
-
-.movie_extra_buttons ons-button:active {
-  color: #96003c;
-}
-
-
 
 
 /* body */
-
 
 .page {
   color: white;
@@ -203,3 +235,43 @@ ul li {
 .bg-title {
   background-color: black;
 }
+
+
+/*Search */
+
+
+.tagbut{
+  border-radius:0px;
+  width: 100px;
+  height: 33px;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  background-color: rgb(102, 101, 101);
+  color:white;
+  
+}
+.marginAddon{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+
+.btn-category{
+  border: 3px solid #EC1D8F;
+}
+
+.btn-category:hover{
+  border: 3px solid #EC1D8F;
+  background-color:  #EC1D8F;
+  color: white;
+}
+
+
+
+
+
+
+
+
+
+
