--- a/views/cart.html
+++ b/views/cart.html
@@ -1,3 +1,4 @@
+<ons-page id="cart">
 <section>
     <h2>MUSIC</h2>
     <div>
@@ -12,3 +13,6 @@
         </div>
     </div>
     <div>
+        
+    </section>
+</ons-page>
