--- a/views/home.html
+++ b/views/home.html
@@ -31,13 +31,13 @@
 
             <div class="movie_list">
                 <ons-carousel auto-refresh swipeable overscrollable item-width="150px">
-                    <ons-carousel-item modifier="nodivider" id="Movie 1" onclick="openMovieDetails(this.id)">
+                    <ons-carousel-item modifier="nodivider" id="Movie 1" onclick="openproductDetails(this.id)">
                         <img src="assets/img/e1.png">
                     </ons-carousel-item>
-                    <ons-carousel-item modifier="nodivider" id="Movie 2" onclick="openMovieDetails(this.id)">
+                    <ons-carousel-item modifier="nodivider" id="Movie 2" onclick="openproductDetails(this.id)">
                         <img src="assets/img/e2.png">
                     </ons-carousel-item>
-                    <ons-carousel-item modifier="nodivider" id="Movie 3" onclick="openMovieDetails(this.id)">
+                    <ons-carousel-item modifier="nodivider" id="Movie 3" onclick="openproductDetails(this.id)">
                         <img src="assets/img/e3.png">
                     </ons-carousel-item>
                 </ons-carousel>
