--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,22 @@
   margin-right: auto;
 }
 
+.logoenter {
+  padding: 10px;
+  width: 50px;
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.logojyp {
+  padding: 10px;
+  width: 50px;
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .logo2 {
     padding: 10px;
     width: 10%;
