--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@ body {
   
   .page__background {
     background-image:
-  linear-gradient(to bottom, rgb(54, 1, 103), rgb(107, 7, 114),rgb(175, 18, 129), rgb(230, 92, 156), rgb(251, 140, 171) );
+  linear-gradient(to bottomrgb(247, 154, 197), rgb(250, 198, 212) );
   }
   
 .logo6 {
