--- a/views/profile.html
+++ b/views/profile.html
@@ -24,8 +24,8 @@
 					<ul class="nav">
 						<li>
 							<a href="#">
-							<i class="glyphicon glyphicon-home"></i>
-							Overview </a>
+							<i class="glyphicon glyphicon-heart"></i>
+							Favourite </a>
 						</li>
 						<li>
 							<a href="#">
