--- a/views/product_details.html
+++ b/views/product_details.html
@@ -1,8 +1,5 @@
 <ons-page id="product_details">
-    <ons-toolbar class="trailer_toolbar" modifier="transparent" inline>
-      <div class="left">
-        <ons-if platform="android"><ons-back-button>Back</ons-back-button></ons-if>
-      </div>
+  <div id="productdetail"></div>
      
 
   </ons-page>
