--- a/views/detail.html
+++ b/views/detail.html
@@ -1,32 +1,91 @@
 <ons-page id="่johnwick">
-    <div class="trailer">
-        <ons-icon icon="fa-play-circle"></ons-icon>
-        <img src="assets/img/trailer.jpg">
-    </div>
+
+    <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
+        <ons-carousel-item>
+                <img src="assets/img/EXO/e1.png">
+            </div>
+        </ons-carousel-item>
+        <ons-carousel-item>
+                <img src="assets/img/EXO/e2.png">
+            </div>
+        </ons-carousel-item>
+        <ons-carousel-item>
+                <img src="assets/img/EXO/e3.png">
+            </div>
+        </ons-carousel-item>
+    </ons-carousel>
+    
+    <!-- <ons-carousel class="area-imgDetail" swipeable auto-scroll id="carousel"">
+        <ons-carousel-item>
+                <img src="assets/img/e1.png" class="imgDetail" >
+        </ons-carousel-item>
+        <ons-carousel-item>
+                <img src="assets/img/e2.png" class="imgDetail" >
+        </ons-carousel-item>
+        <ons-carousel-item>
+                <img src="assets/img/e3.png" class="imgDetail">
+        </ons-carousel-item>
+    </ons-carousel> -->
+
+    <!-- <div class="area-imgDetail">
+        <img src="assets/img/e1.png" class="imgDetail" alt="" srcset="">
+    </div> -->
+   
     <div class="movie_info">
-        <h1>John Wick 3</h1>
-        <ons-row class="movie_general_info">
-            <ons-col class="stars">
-                <ons-icon style="color: pink" icon="fa-star"></ons-icon>
-                <ons-icon style="color:  pink" icon="fa-star"></ons-icon>
-                <ons-icon style="color:  pink" icon="fa-star"></ons-icon>
-                <ons-icon style="color:   pink" icon="fa-star"></ons-icon>
-                <ons-icon style="color: gray" icon="fa-star"></ons-icon>
-            </ons-col>
-            <ons-col>2019</ons-col>
-            <ons-col>Action</ons-col>
-            <ons-col>2h 10m</ons-col>
-        </ons-row>
-        <div class="movie_synopsis">John Wick is on the run after killing a member of the international assassins'
-            guild, and with a $14 million price tag on his head, he is the target of hit men and women everywhere.The
-            third installment was announced in June 2017. Much of the returning cast and crew was confirmed in February
-            2018, with new members joining that May. Filming began that month and lasted through November, taking place
-            in New York City, Montreal, and Morocco.
+        <div class="movie_synopsis Prompt"><h1>EXO-Official Light Stick</h1>
+            <ons-row class="movie_general_info">
+
+                <ons-col class="stars">
+                    <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
+                    <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
+                    <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
+                    <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
+                    <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
+                </ons-col>
+
+                <ons-col>SM Entertainment</ons-col>
+            </ons-row>
+
+            <div class="movie_cast">
+                1,000 THB
+            </div>
+
+            MiKR EXO Official Light Stick, Version 3.0 KPOP EXO Stick Light Concert Lamp Fan Product with A Keychain 
+            - Connect Phone Via Bluetooth
         </div>
-        <div class="movie_cast">
-            Keanu Reeves, Halle Berry, Ian McShane <br />
-            Director: Chad Stahelski
+    
+
+        <div class="area-btn">
+            <button type="button" id="btnPlayFav" class="cart-btn btn-lg btn-block">ADD TO CART</button>
+            <div id="showVideoFav"></div>
         </div>
+
+        <div class="area-btn">
+            <button type="button" id="btnPlayFav" class="buy-btn btn-lg btn-block">BUY WITH PAY</button>
+            <div id="showVideoFav"></div>
+        </div>
+
+        <div class="movie_list">
+            You might also Like
+            <ons-carousel auto-refresh swipeable overscrollable item-width="110px">
+                <ons-carousel-item modifier="nodivider">
+                    <img src="assets/img/e12.png">
+                </ons-carousel-item>
+                <ons-carousel-item modifier="nodivider">
+                    <img src="assets/img/e13.png">
+                </ons-carousel-item>
+                <ons-carousel-item modifier="nodivider">
+                    <img src="assets/img/e14.png">
+                </ons-carousel-item>
+                <ons-carousel-item modifier="nodivider">
+                    <img src="assets/img/e6.png">
+                </ons-carousel-item>
+                <ons-carousel-item modifier="nodivider">
+                    <img src="assets/img/e7.png">
+                </ons-carousel-item>
+            </ons-carousel>
+        </div>
+
     </div>
 
 </ons-page>
