--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@
 
 .carousel ons-carousel-item img {
     width: 100%;
-    max-height: 190px
+    max-height: 200px
   }
 
   .movie_list {
@@ -82,6 +82,36 @@
   }  
 
 /*-----------หน้า Movie_Details-----------*/
+
+.area-imgDetail{
+  margin-top: 0.5rem;
+  padding-bottom: 3rem;
+  text-align: center;
+}
+
+.imgDetail{
+  width: 70%;
+}
+
+.area-btn{
+  padding-top: 1rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.cart-btn{
+  font-weight: bold;
+  font-size: 15px;
+  background-color: #EC1D8F;
+  color: white;
+}
+
+.buy-btn{
+  font-weight: bold;
+  font-size: 15px;
+  background-color:black;
+  color: white;
+}
 
 .trailer {
     height: 190px;
@@ -126,10 +156,18 @@
   .movie_synopsis {
     text-align: justify;
     margin-bottom: 10px;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+    margin-top: 1rem;
   }
-
   .movie_cast {
-    color: gray;
+    font-size: 22px;
+    font-weight: bold;
+    color: #EC1D8F;
+    text-align: justify;
+    margin-bottom: 10px;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
   }
 
   .stars {
