--- a/views/detail.html
+++ b/views/detail.html
@@ -47,26 +47,29 @@
             </ons-row>
 
             <div class="movie_cast">
-                1,000 THB
+                1,000฿ THB
             </div>
 
+            <div class="detail_product">
             MiKR EXO Official Light Stick, Version 3.0 KPOP EXO Stick Light Concert Lamp Fan Product with A Keychain 
             - Connect Phone Via Bluetooth
+            </div>
+            
         </div>
     
 
         <div class="area-btn">
-            <button type="button" id="btnPlayFav" class="cart-btn btn-lg btn-block">ADD TO CART</button>
+            <ons-button type="button" id="btnPlayFav" class="cart-btn btn-lg btn-block">ADD TO CART</ons-button>
             <div id="showVideoFav"></div>
         </div>
 
         <div class="area-btn">
-            <button type="button" id="btnPlayFav" class="buy-btn btn-lg btn-block">BUY WITH PAY</button>
+            <ons-button type="button" id="btnPlayFav" class="buy-btn btn-lg btn-block">BUY WITH <i class="fa fa-google fa-fw"></i> PAY</ons-button>
             <div id="showVideoFav"></div>
         </div>
 
         <div class="movie_list">
-            You might also Like
+            <div class="detail_product">You might also Like</div>
             <ons-carousel auto-refresh swipeable overscrollable item-width="110px">
                 <ons-carousel-item modifier="nodivider">
                     <img src="assets/img/e12.png">
