--- a/css/style.css
+++ b/css/style.css
@@ -100,16 +100,18 @@
 }
 
 .cart-btn{
+  text-align: center;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 9px;
   background-color: #EC1D8F;
   color: white;
 }
 
 .buy-btn{
+  text-align: center;
   font-weight: bold;
-  font-size: 15px;
-  background-color:black;
+  font-size: 9px;
+  background-color:rgb(53, 53, 53);
   color: white;
 }
 
@@ -164,6 +166,15 @@
     font-size: 22px;
     font-weight: bold;
     color: #EC1D8F;
+    text-align: justify;
+    margin-bottom: 10px;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+  }
+
+  .detail_product {
+    font-size: 14px;
+    color: white;
     text-align: justify;
     margin-bottom: 10px;
     margin-left: 0.4rem;
