--- a/views/search.html
+++ b/views/search.html
@@ -7,6 +7,24 @@
  
              <ons-search-input id="searchInput" placeholder="Search" onchange="getfromSearch()"></ons-search-input>
           </p>
+          <ons-carousel item-width="115px" style="text-align: center; padding-left: 1rem;margin-top: 0.8rem;"
+                swipeable auto-scroll overscrollable>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="All">ALL</button>
+                </ons-carousel-item>
+                <ons-carousel-item style="margin-right: 4px;margin-left: 4px;">
+                    <button type="button" class="btn btn-category tagbut" id="Sm">SM</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Yg">YG</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Jyp">JYP</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Bighit">BigHit</button>
+                </ons-carousel-item>
+    </ons-carousel>
           <ons-row class="rowmagin" id="search_show">
               
              <ons-row id="searchItem">
