--- a/views/home.html
+++ b/views/home.html
@@ -4,44 +4,50 @@
     <template id="page1.html">
         <ons-page id="Home">
 
-            <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
+            <ons-carousel class="carousel" swipeable auto-scroll>
                 <ons-carousel-item>
-                    <div style="text-align: center; font-size: 30px; color: #fff;">
-                        <img src="assets/img/pepsi.jpg" alt="" id="johnwick">
+                        <img src="assets/img/pepsi.jpg" >
                     </div>
                 </ons-carousel-item>
                 <ons-carousel-item>
-                    <div style="text-align: center; font-size: 30px; color: #fff;">
-                        <img src="assets/img/exo.jpg" alt="" id="wonderwoman">
+                        <img src="assets/img/exo.jpg">
                     </div>
                 </ons-carousel-item>
                 <ons-carousel-item>
-                    <div style=" text-align: center; font-size: 30px; color: #fff; ">
-                        <img src=" assets/img/kb.jpg " alt=" " id="toystory">
+                        <img src=" assets/img/kb.jpg ">
                     </div>
                 </ons-carousel-item>
             </ons-carousel>
 
-            <div class="col-4" style = "padding-left:0px;padding-right:0px">
-                <div id="" class="imgSrc d-flex align-items-end" style="background-image: url" >
-                    <div class="movietextbg">
-                        <div class="movietitle-Src"></div>
-                    </div>
-                </div>
+            <div class="movie_list">
+            <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
+                <ons-carousel-item>
+                        <img src="assets/img/e1.png" id="johnwick">
+                </ons-carousel-item>
+                <ons-carousel-item>
+                        <img src="assets/img/e2.png" id="wonderwoman">
+                </ons-carousel-item>
+            </ons-carousel>
             </div>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
 
             <div class="movie_list">
-                <ons-carousel auto-refresh swipeable overscrollable item-width="187px">
-                    <ons-carousel-item modifier="nodivider" id="Movie 1" onclick="openproductDetails(this.id)">
-                        <img src="assets/img/e1.png">
+                <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
+                    <ons-carousel-item>
+                            <img src="assets/img/e3.png" id="toystory">
                     </ons-carousel-item>
-                    <ons-carousel-item modifier="nodivider" id="Movie 2" onclick="openproductDetails(this.id)">
-                        <img src="assets/img/e2.png">
+                    <ons-carousel-item>
+                            <img src="assets/img/e4.png" id="">
                     </ons-carousel-item>
                 </ons-carousel>
-            </div>
+                </div>
 
             <br>
             <br>
@@ -50,14 +56,14 @@
             <br>
             <br>
             <br>
-           
+
             <div class="movie_list">
                 <ons-carousel auto-refresh swipeable overscrollable item-width="187px">
                     <ons-carousel-item modifier="nodivider">
                         <img src="assets/img/e7.png" >
                     </ons-carousel-item>
                     <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e4.png">
+                        <img src="assets/img/e6.png">
                     </ons-carousel-item>
                 </ons-carousel>
             </div>
