--- a/views/detail.html
+++ b/views/detail.html
@@ -1,4 +1,4 @@
-<ons-page id="่johnwick">
+<ons-page id="่exolightstick">
 
     <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
         <ons-carousel-item>
