--- a/views/detail3.html
+++ b/views/detail3.html
@@ -1,4 +1,4 @@
-<ons-page id="toystory">
+<ons-page id="btsmemories">
     <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
         <ons-carousel-item>
                 <img src="assets/img/EXO/e1.png">
