--- a/views/home.html
+++ b/views/home.html
@@ -22,10 +22,10 @@
             <div class="movie_list">
             <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
                 <ons-carousel-item>
-                        <img src="assets/img/e1.png" id="johnwick">
+                        <img src="assets/img/e1.png" id="่exolightstick">
                 </ons-carousel-item>
                 <ons-carousel-item>
-                        <img src="assets/img/e2.png" id="wonderwoman">
+                        <img src="assets/img/e2.png" id="jaehyunposcard">
                 </ons-carousel-item>
             </ons-carousel>
             </div>
@@ -41,7 +41,7 @@
             <div class="movie_list">
                 <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
                     <ons-carousel-item>
-                            <img src="assets/img/e3.png" id="toystory">
+                            <img src="assets/img/e3.png" id="btsmemories">
                     </ons-carousel-item>
                     <ons-carousel-item>
                             <img src="assets/img/e4.png" id="">
