--- a/views/detail3.html
+++ b/views/detail3.html
@@ -1,15 +1,15 @@
 <ons-page id="btsmemories">
     <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
         <ons-carousel-item>
-                <img src="assets/img/EXO/e1.png">
+                <img src="assets/img/BTS/b3.png">
             </div>
         </ons-carousel-item>
         <ons-carousel-item>
-                <img src="assets/img/EXO/e2.png">
+                <img src="assets/img/BTS/b2.png">
             </div>
         </ons-carousel-item>
         <ons-carousel-item>
-                <img src="assets/img/EXO/e3.png">
+                <img src="assets/img/BTS/b1.png">
             </div>
         </ons-carousel-item>
     </ons-carousel>
@@ -31,7 +31,7 @@
     </div> -->
    
     <div class="movie_info">
-        <div class="movie_synopsis Prompt"><h1>EXO-Official Light Stick</h1>
+        <div class="movie_synopsis Prompt"><h1>BTS-Memories of 2014</h1>
             <ons-row class="movie_general_info">
 
                 <ons-col class="stars">
@@ -41,17 +41,15 @@
                     <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
                     <ons-icon style="color: #EC1D8F" icon="fa-star"></ons-icon>
                 </ons-col>
-
-                <ons-col>SM Entertainment</ons-col>
+                <ons-col>BigHit</ons-col>
             </ons-row>
 
             <div class="movie_cast">
-                1,000฿ THB
+                1,200฿ THB
             </div>
 
             <div class="detail_product">
-            MiKR EXO Official Light Stick, Version 3.0 KPOP EXO Stick Light Concert Lamp Fan Product with A Keychain 
-            - Connect Phone Via Bluetooth
+            BTS MEMORIES OF 2014 DVD :3Disc+100p Photobook+Poster+GiftPhoto bangtan boys bts
             </div>
             
         </div>
