--- a/views/home.html
+++ b/views/home.html
@@ -4,6 +4,9 @@
     <template id="page1.html">
         <ons-page id="Home">
 
+            <ons-carousel auto-refresh swipeable overscrollable id="carousel2"item-width="150px">
+            </ons-carousel>
+
             <ons-carousel class="carousel" swipeable auto-scroll>
                 <ons-carousel-item>
                         <img src="assets/img/pepsi.jpg" >
