--- a/views/home.html
+++ b/views/home.html
@@ -47,7 +47,7 @@
                             <img src="assets/img/e3.png" id="btsmemories">
                     </ons-carousel-item>
                     <ons-carousel-item>
-                            <img src="assets/img/e4.png" id="">
+                            <img src="assets/img/e4.png" id="blackpinkticket">
                     </ons-carousel-item>
                 </ons-carousel>
                 </div>
@@ -63,7 +63,7 @@
             <div class="movie_list">
                 <ons-carousel auto-refresh swipeable overscrollable item-width="187px">
                     <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e7.png" >
+                        <img src="assets/img/e7.png">
                     </ons-carousel-item>
                     <ons-carousel-item modifier="nodivider">
                         <img src="assets/img/e6.png">
