add search function

--- a/views/search.html
+++ b/views/search.html
@@ -1,4 +1,4 @@
-<ons-page id="search">
+<ons-page id="search"> 
     <ons-navigator swipeable id="myNavigator_search" page="page2.html"></ons-navigator>
 
     <template id="page2.html">
@@ -25,13 +25,45 @@
                     <button type="button" class="btn btn-category tagbut" id="Bighit">BigHit</button>
                 </ons-carousel-item>
     </ons-carousel>
+    <br>
           <ons-row class="rowmagin" id="search_show">
-              
              <ons-row id="searchItem">
- 
              </ons-row>
           </ons-row>
  
        </ons-page>
     </template>
+
+    <!-- <ons-page id="search">
+    
+        <ons-carousel item-width="115px" style="text-align: center; padding-left: 1rem;margin-top: 0.8rem;"
+                swipeable auto-scroll overscrollable>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="All">ALL</button>
+                </ons-carousel-item>
+                <ons-carousel-item style="margin-right: 4px;margin-left: 4px;">
+                    <button type="button" class="btn btn-category tagbut" id="Sm">SM</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Yg">YG</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Jyp">JYP</button>
+                </ons-carousel-item>
+                <ons-carousel-item class="marginAddon">
+                    <button type="button" class="btn btn-category tagbut" id="Bighit">BigHit</button>
+                </ons-carousel-item>
+    </ons-carousel>
+    
+        <p style="text-align: center; margin-top: 10px;">
+            <ons-search-input placeholder="Search" id="search_input" onchange="getfromSearch()"></ons-search-input>
+            </ons-search-input>
+            <button type="button" id="search" class="searchBtn">Search</button>
+            
+        </p>
+    
+        <div id="sug_show"></div>
+        <div id="search_show"></div> -->
+
+        
  </ons-page>
