--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,11 @@ font-family: 'SFProDisplay', SFProDisplay-Regular;
   color: white;
 }
 
+.detail_search {
+  font-size: 14px;
+  color: rgb(255, 255, 255);
+}
+
 
 
 
