--- a/views/search.html
+++ b/views/search.html
@@ -8,16 +8,16 @@
           <ons-carousel item-width="115px" style="text-align: center; padding-left: 1rem;margin-top: 0.8rem;"
                 swipeable auto-scroll overscrollable >
                 <ons-carousel-item class="marginAddon">
-                    <button type="button" class="btn btn-category tagbut" id="SM" >SM</button>
+                    <button type="button" class="button" id="SM" >SM</button>
                 </ons-carousel-item>
                 <ons-carousel-item class="marginAddon">
-                    <button type="button" class="btn btn-category tagbut" id="YG" >YG</button>
+                    <button type="button" class="button" id="YG" >YG</button>
                 </ons-carousel-item>
                 <ons-carousel-item class="marginAddon">
-                    <button type="button" class="btn btn-category tagbut" id="JYP" >JYP</button>
+                    <button type="button" class="button" id="JYP" >JYP</button>
                 </ons-carousel-item>
                 <ons-carousel-item class="marginAddon">
-                    <button type="button" class="btn btn-category tagbut" id="Bighit" >BigHit</button>
+                    <button type="button" class="button" id="Bighit" >BigHit</button>
                 </ons-carousel-item>
     </ons-carousel>
     <br>
