--- a/css/style.css
+++ b/css/style.css
@@ -304,28 +304,13 @@ font-family: 'SFProDisplay', SFProDisplay-Regular;
 
 /*Search */
 
-.tagbut{
-  width: 100px;
-  height: 33px;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  background-color: rgb(73, 73, 73);
-  color:white;
-  
-}
 .marginAddon{
   margin-left: 0;
   margin-right: 0;
 }
 
-.btn-category:hover{
-  border: 0px solid #EC1D8F;
-  background-color:  #EC1D8F;
-  color: white;
-}
-
 .detail_search {
-  font-size: 14px;
+  font-size: 12px;
   color: rgb(255, 255, 255);
 }
 
@@ -339,7 +324,36 @@ font-family: 'SFProDisplay', SFProDisplay-Regular;
   margin-right: auto;
   margin-top: 1rem;
   border-radius: 10px;
-  border: 4px solid #000;
+  border: 0x solid #000;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.button {
+  transition-duration: 0.1s;
+  background-color: rgb(73, 73, 73);
+  width: 100px;
+  height: 35px;
+  font-size: 14px;
+  margin-top: 0.5rem;
+  padding: 0.2rem 0 0.2rem 0;
+  width: 90%;
+  height: 35px;
+}
+.button:hover {
+  background-color: #EC1D8F; /* Green */
+  color: white;
+  font-size: 14px;
 }
 
 
