--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
     <template id="page1.html">
         <ons-page id="Home">
 
-            <ons-carousel auto-refresh swipeable overscrollable id="carousel2"item-width="150px">
+            <ons-carousel auto-refresh swipeable overscrollable id="carousel"item-width="150px">
             </ons-carousel>
 
             <ons-carousel class="carousel" swipeable auto-scroll>
