--- a/views/profile.html
+++ b/views/profile.html
@@ -44,7 +44,7 @@
 							Help </a>
             </li>
             <li>
-							<a href="#">
+							<a href="/login.html">
 							<i class="glyphicon glyphicon-log-out"></i>
 							Sign Out </a>
 						</li>
