--- a/css/style.css
+++ b/css/style.css
@@ -71,13 +71,13 @@
     max-height: 200px
   }
 
-  .movie_list {
+  .product_list {
     margin: 10px;
     height: 130px;
     padding-top: 30px;
   }
 
-  .movie_list img {
+  .product_list img {
     width: 90%
   }  
 
@@ -341,6 +341,19 @@ font-family: 'SFProDisplay', SFProDisplay-Regular;
   background-color: #EC1D8F; /* Green */
   color: white;
   font-size: 14px;
+}
+
+.containerH {
+  border-radius: 10px;
+  /* border: dashed; */
+  height: fit-content;
+  background-color: gainsboro;
+  margin-bottom: 10px;
+}
+
+.containerH div {
+  font-size: 14px;
+  margin-left: 0.5rem;
 }
 
 
