--- a/views/home.html
+++ b/views/home.html
@@ -1,99 +1,9 @@
 <ons-page id="home">
 
-    <ons-navigator swipeable id="myNavigator" page="page1.html"></ons-navigator>
-    <template id="page1.html">
-        <ons-page id="Home">
+    <ons-carousel fullscreen swipeable auto-scroll overscrollable id="advertiser" style="height: 80%;">
+    </ons-carousel>
+    
+    <ons-row id="recommend"></ons-row>
 
-            <ons-carousel auto-refresh swipeable overscrollable id="carousel"item-width="150px">
-            </ons-carousel>
-
-            <ons-carousel class="carousel" swipeable auto-scroll>
-                <ons-carousel-item>
-                        <img src="assets/img/pepsi.jpg" >
-                    </div>
-                </ons-carousel-item>
-                <ons-carousel-item>
-                        <img src="assets/img/exo.jpg">
-                    </div>
-                </ons-carousel-item>
-                <ons-carousel-item>
-                        <img src=" assets/img/kb.jpg ">
-                    </div>
-                </ons-carousel-item>
-            </ons-carousel>
-
-            <div class="movie_list">
-            <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
-                <ons-carousel-item>
-                        <img src="assets/img/e1.png" id="่exolightstick">
-                </ons-carousel-item>
-                <ons-carousel-item>
-                        <img src="assets/img/e2.png" id="jaehyunposcard">
-                </ons-carousel-item>
-            </ons-carousel>
-            </div>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <div class="movie_list">
-                <ons-carousel auto-refresh swipeable overscrollable item-width="187px" id="carousel"">
-                    <ons-carousel-item>
-                            <img src="assets/img/e3.png" id="btsmemories">
-                    </ons-carousel-item>
-                    <ons-carousel-item>
-                            <img src="assets/img/e4.png" id="blackpinkticket">
-                    </ons-carousel-item>
-                </ons-carousel>
-                </div>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <div class="movie_list">
-                <ons-carousel auto-refresh swipeable overscrollable item-width="187px">
-                    <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e7.png">
-                    </ons-carousel-item>
-                    <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e6.png">
-                    </ons-carousel-item>
-                </ons-carousel>
-            </div>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-           
-            <div class="movie_list">
-                <ons-carousel auto-refresh swipeable overscrollable item-width="185px">
-                    <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e5.png">
-                    </ons-carousel-item>
-                    <ons-carousel-item modifier="nodivider">
-                        <img src="assets/img/e8.png">
-                    </ons-carousel-item>
-                </ons-carousel>
-            </div>
-
-            <br>
-            <br>
-
-
-        </ons-page>
-    </template>
 </ons-page>
+
