--- a/views/detail2.html
+++ b/views/detail2.html
@@ -1,5 +1,5 @@
 <ons-page id="jaehyunposcard">
-    <ons-carousel class="carousel" swipeable auto-scroll id="carousel"">
+    <ons-carousel class="carousel" swipeable auto-scroll id="carousel">
         <ons-carousel-item>
                 <img src="assets/img/EXO/e1.png">
             </div>
